--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,19 @@
 .App {
-    --header_height: 60px;
+  --header_height: 60px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .hw {
-
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #d9d9d9;
+  padding: 24px 70px 32px;
+  gap: 54px;
 }
 
 .hwTitle {
-
+  font-weight: 600;
+  font-size: 22px;
+  color: #000;
+  padding-left: 70px;
 }
