--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,57 @@
 .friendMessage {
-
+    position: relative;
+    margin-bottom: 47px;
 }
 
 .friendImageAndText {
-
+  display: flex;
+  align-items: flex-end;
 }
 
 .friendImageAndText img {
-
+  border-radius: 100%;
 }
 
 .friendText {
-
+  position: relative;
+  background-color: #f5f7fb;
+  padding: 8px 13px;
+  margin-left: 15px;
+  border-radius: 10px 10px 10px 0;
+  filter: drop-shadow(0 1px 2px rgba(29, 33, 38, 0.1))
+    drop-shadow(0 5px 20px rgba(29, 33, 38, 0.03));
 }
 
 .friendText:after {
-
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: -14px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 9px 14px 0 0;
+  border-color: transparent #f5f7fb transparent transparent;
 }
 
 .friendName {
-
+  font-weight: 600;
+  font-size: 16px;
+  color: #000;
 }
 
 .friendMessageText {
-
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #000;
 }
 
 .friendTime {
-
+    font-weight: 600;
+    font-size: 10px;
+    color: #000;
+    position: absolute;
+    left: 12px;
+    bottom: -16px;
 }
