--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,18 +1,38 @@
 .sendForm {
-
+    display: flex;
+    gap: 44px;
 }
 
 .textarea {
-
+    min-height: 40px;
+    resize: none;
+    outline: none;
+    border: none;
+    border-radius: 20px;
+    width: 976px;
+    height: 40px;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1), 0 5px 20px 0 rgba(29, 33, 38, 0.03);
+    background: #f5f7fb;
+    padding: 12px 24px;
 }
 
 .button {
-
+    border: none;
+    border-radius: 20px;
+    width: 120px;
+    height: 40px;
+    background: #06c;
+    font-weight: 600;
+    font-size: 16px;
+    color: #fff;
+    padding: 10px 38px;
 }
 
 .button:hover {
+    background-color: #2382e1;
 
 }
 .button:active {
+    background-color: #2382e1;
 
 }
