--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,31 +1,60 @@
 .message {
-
+  position: relative;
+  margin-bottom: 47px;
 }
 
 .imageAndText {
-
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
 }
 
 .imageAndText img {
-
+  width: 48px;
+  height: 48px;
+  position: relative;
+  z-index: 3;
 }
 
 .text {
-
+  position: relative;
+  background-color: #0066cc;
+  padding: 8px 13px;
+  margin-right: 15px;
+  border-radius: 10px 10px 0 10px;
+  color: #fff;
+  filter: drop-shadow(0 1px 2px rgba(29, 33, 38, 0.1))
+    drop-shadow(0 5px 20px rgba(29, 33, 38, 0.03));
 }
 
 .text:after {
-
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: -14px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 9px 14px 0 0;
+  border-color: transparent #f5f7fb transparent transparent;
 }
 
 .name {
-
+  font-weight: 600;
+  font-size: 16px;
 }
 
 .messageText {
-
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .time {
-
+    font-weight: 600;
+    font-size: 10px;
+    color: #000;
+    position: absolute;
+    right: 10px;
+    bottom: -16px;
 }
