--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -2,21 +2,45 @@
 }
 
 .inputAndButtonContainer {
+    display: flex;
+    gap: 12px;
+    margin-bottom: 10px;
 }
 
 .error {
+    color: #C00;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .input {
+    border-radius: 6px;
+    display: inline-block;
+    min-width: 372px;
+    height: 36px;
+    padding: 8px 12px;
+    outline: none;
+    border: 1px solid #D1D1D1;
+    margin-bottom: 7px;
 }
 
 .input:focus {
+    border-color: #06c;
 }
 
 .errorInput {
+    border-color: #CC0000;
 }
 
 .button {
+    border-radius: 3px;
+    padding: 5px 24px;
+    background-color: #06c;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.42857;
+    color: #fff;
+    height: 36px;
 }
 
 .button:focus {
@@ -29,6 +53,10 @@
 }
 
 .text {
+    font-weight: 500;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 8px;
 }
 
 .greeting {
