--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,20 +1,41 @@
 .input:focus {
+    outline: 2px solid #D1D1D1;
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    border-radius: 6px;
+    padding: 10px;
 }
 
 .inputWrapper {
+    position: relative;
 }
 
 .superInput {
+    border: 1px solid #D1D1D1;
+    position: relative;
+    margin-bottom: 19px;
+}
+
+.superInput:focus {
+    border-color: #0066CC;
 }
 
 .errorInput {
+    border-color: #cc1439;
 }
 
 .errorInput:focus {
+    outline: #cc1439;
 }
 
 .error {
+    position: absolute;
+    top: -15px;
+    left: 0;
+    font-weight: 400;
+    font-size: 10px;
+    color: #cc1439;
 }
